# icctools

./: .env.example  .gitignore  CLAUDE.md  dev.sh  docker-compose.yml  package-lock.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/wasm/: SHA256SUMS  iccjson.mjs  iccjson.wasm  iccprofiledump.mjs  iccprofiledump.wasm  iccxml.mjs  iccxml.wasm
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: ConverterPanel.module.css  DropZone.jsx  DropZone.module.css  HeaderTable.jsx  HeaderTable.module.css  JsonPanel.jsx  ProfileViewer.jsx  ProfileViewer.module.css  TagDetailModal.jsx  TagDetailModal.module.css  TagTable.jsx  TagTable.module.css  TextEditor.jsx  TextEditor.module.css  ValidationPanel.jsx  ValidationPanel.module.css  XmlPanel.jsx  XmlPanel.module.css
frontend/src/lib/: jsonConverter.js  tagDiff.js  validator.js  xmlConverter.js
scripts/: build-wasm.sh  deploy.sh
validator/: Dockerfile  package-lock.json  package.json  server.js
validator-tool/: CMakeLists.txt  main.cpp
validator-wasm/: CMakeLists.txt  json-smoketest.mjs  json-wrapper.cpp  smoketest.mjs  wrapper.cpp  xml-smoketest.mjs  xml-wrapper.cpp
